[package]
name = "thuki"
version = "0.7.0"
description = "Thuki: The context-aware floating secretary"
authors = ["Logan Nguyen"]
license = "Apache-2.0"
repository = "https://github.com/quiet-node/thuki"
homepage = "https://github.com/quiet-node/thuki"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "thuki_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.3", features = ["json", "stream"] }
tokio = { version = "1.52.1", features = ["macros"] }
futures-util = "0.3.32"
tokio-util = "0.7"
toml = "0.9"
toml_edit = "0.25"
parking_lot = "0.12"
rusqlite = { version = "0.39", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "6"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
base64 = "0.22"
html-escape = "0.2"
thiserror = "1"
time = { version = "0.3", features = ["std"] }
async-trait = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
core-graphics = "0.25"
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSRunningApplication"] }

[dev-dependencies]
mockito = "1"
tokio = { version = "1", features = ["rt", "macros", "net", "io-util"] }
wiremock = "0.6"

